--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "/"
+baseURL = "https://amtsimplified.com/"
 languageCode = "en-us"
 title = "AMT Simplified"
 theme = "minimal"
@@ -22,7 +22,7 @@ googleAnalytics = "UA-171252878-1"
     weight = 1
 
 [[menu.main]]
-    url = "/what-is-the-amt/"
+    url = "/posts/"
     name = "What is the AMT"
     weight = 2
 
@@ -32,9 +32,14 @@ googleAnalytics = "UA-171252878-1"
     weight = 3
 
 [[menu.main]]
+    url = "/iso-exercise-planner/"
+    name = "ISO Exercise Planner"
+    weight = 4
+
+[[menu.main]]
     url = "/about/"
     name = "About"
-    weight = 4
+    weight = 5
 
 # Social icons to be shown on the right-hand side of the navigation bar.
 # The "name" field should match the name of the icon in Font Awesome.
