--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ googleAnalytics = "UA-171252878-1"
     accent = "green"
     showBorder = true
     backgroundColor = "white"
-    font = "Raleway" # should match the name on Google Fonts!
+    font = "Open Sans" # should match the name on Google Fonts!
     highlight = true
     highlightStyle = "default"
     highlightLanguages = ["go", "haskell", "kotlin", "scala", "swift"]
@@ -23,7 +23,7 @@ googleAnalytics = "UA-171252878-1"
 
 [[menu.main]]
     url = "/posts/"
-    name = "What is the AMT"
+    name = "Learn about the AMT"
     weight = 2
 
 [[menu.main]]
@@ -46,7 +46,7 @@ googleAnalytics = "UA-171252878-1"
 # The list of available icons can be found at http://fontawesome.io/icons.
 
 [[menu.icon]]
-    url = "mailto:me@example.com"
+    url = "mailto:amtsimplified@gmail.com"
     name = "envelope-o"
     weight = 1
 
