--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ googleAnalytics = "UA-171252878-1"
 
 [[menu.main]]
     url = "/iso-exercise-planner/"
-    name = "ISO Exercise Planner"
+    name = "Incentive Stock Option Tax Planner"
     weight = 4
 
 [[menu.main]]
