--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ googleAnalytics = "UA-171252878-1"
     accent = "green"
     showBorder = true
     backgroundColor = "white"
-    font = "Open Sans" # should match the name on Google Fonts!
+    font = "Montserrat,sans-serif" # should match the name on Google Fonts!
     highlight = true
     highlightStyle = "default"
     highlightLanguages = ["go", "haskell", "kotlin", "scala", "swift"]
