--- a/config.toml
+++ b/config.toml
@@ -15,6 +15,8 @@ googleAnalytics = "UA-171252878-1"
     highlight = true
     highlightStyle = "default"
     highlightLanguages = ["go", "haskell", "kotlin", "scala", "swift"]
+    gtm_id = "GTM-KZWZW7N"
+    gtm_datalayer = "basic"
 
 [[menu.main]]
     url = "/"
