--- a/config.toml
+++ b/config.toml
@@ -72,4 +72,4 @@ googleAnalytics = "UA-171252878-1"
 #[[menu.icon]]
     #url = "https://www.stackoverflow.com/username/"
     #name = "stack-overflow"
-    #weight = 5
+    #weight = 5ß
