--- a/config.toml
+++ b/config.toml
@@ -45,6 +45,11 @@ googleAnalytics = "UA-171252878-1"
     name = "About"
     weight = 5
 
+[[menu.main]]
+    url = "https://www.buymeacoffee.com/amtsimplified"
+    name = "Support Me!"
+    weight = 6    
+
 # Social icons to be shown on the right-hand side of the navigation bar.
 # The "name" field should match the name of the icon in Font Awesome.
 # The list of available icons can be found at http://fontawesome.io/icons.
@@ -53,11 +58,6 @@ googleAnalytics = "UA-171252878-1"
     url = "mailto:amtsimplified@gmail.com"
     name = "envelope-o"
     weight = 1
-
-#[[menu.icon]]
-    #url = "https://github.com/username/"
-    #name = "github"
-    #weight = 2
 
 #[[menu.icon]]
     #url = "https://twitter.com/username/"
