--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ googleAnalytics = "UA-171252878-1"
 
 [[menu.main]]
     url = "/learn_about_the_amt/"
-    name = "Learn about the AMT"
+    name = "Learn About The AMT"
     weight = 2
 
 [[menu.main]]
